# w2v-with-string-matching

./: .gitignore  CMakeLists.txt
results/result-0.0001/: c-sim-result  t-sim-result
results/result-0.0025/: c-sim-result  t-sim-result
results/result-0.025/: c-sim-result  t-sim-result
samples/: bible111.txt  evaluation_vocab  evaluation_vocab-0  evaluation_vocab-3.txt
scripts/: build.sh  script
src/: word2vec-targetword.c  word2vec.c
src/algos/: hor.cu  hor.cuh
src/srlalgos/: hor.c
src/srlalgos/include/: log2.h
src/util/: parameters.h
src/wrappers/: hor_wrapper.cu  wrapper.h  wrapper_helpers.cu  wrapper_helpers.h
